--- a/rubik/index.html
+++ b/rubik/index.html
@@ -155,8 +155,8 @@ void main() {
 <!--https://github.com/ldez/cubejs/tree/master-->
 <script src="https://code.jquery.com/jquery-3.1.0.min.js" integrity="sha256-cCueBR6CsyA4/9szpPfrX3s49M9vUU5BgtiJj06wt/s=" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-<script src="/solver/kociemba/cube.js" type="text/javascript"></script>
-<script src="/solver/kociemba/solve.js" type="text/javascript"></script>
-<script src="/solver/kociemba/async.js" type="text/javascript"></script>
+<script src="/rubik/solver/kociemba/cube.js" type="text/javascript"></script>
+<script src="/rubik/solver/kociemba/solve.js" type="text/javascript"></script>
+<script src="/rubik/solver/kociemba/async.js" type="text/javascript"></script>
 
 <script type="module" src="rubik.js"></script>
